# prova_2_banco_nao_relacional

./: README.md  manage.py  pyproject.toml
cursos/: admin.py  forms.py  models.py  urls.py  views.py
cursos/migrations/: 0001_initial.py  0002_curso_autor.py
cursos/templates/cursos/: chat.html  curso_confirm_delete.html  curso_form.html  curso_list.html  home.html  login.html  logout.html  main.html  register.html
cursos_programacao/: asgi.py  settings.py  wsgi.py
static/css/: styles.css
web_message/: main.py
